--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -166,6 +166,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.4'
     implementation 'com.google.firebase:firebase-firestore:+'
     implementation 'com.google.firebase:firebase-auth:+'
+
+    implementation project(':react-native-geolocation-service')
 }
 
 // Run this once to be able to run the application with BUCK
