--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -7,3 +7,6 @@ project(':react-native-navigation').projectDir = new File(rootProject.projectDir
 
 include ':react-native-firebase'
 project(':react-native-firebase').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-firebase/android')
+
+include ':react-native-geolocation-service'
+project(':react-native-geolocation-service').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-geolocation-service/android')
