--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "16.6.1",
     "react-native": "0.57.7",
     "react-native-firebase": "^5.1.1",
+    "react-native-geolocation-service": "^2.0.0",
     "react-native-navigation": "^2.1.3"
   },
   "devDependencies": {
