--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -166,6 +166,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.4'
     implementation 'com.google.firebase:firebase-firestore:+'
     implementation 'com.google.firebase:firebase-auth:+'
+
+    implementation 'com.facebook.fresco:fresco:+'
+    implementation 'com.facebook.fresco:animated-gif:+'
 }
 
 // Run this once to be able to run the application with BUCK
