--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -170,6 +170,8 @@ dependencies {
     implementation project(':react-native-geolocation-service')
     implementation 'com.facebook.fresco:fresco:+'
     implementation 'com.facebook.fresco:animated-gif:+'
+
+    implementation project(':react-native-vector-icons')
 }
 
 // Run this once to be able to run the application with BUCK
@@ -180,3 +182,9 @@ task copyDownloadableDepsToLibs(type: Copy) {
 }
 
 apply plugin: 'com.google.gms.google-services'
+
+project.ext.vectoricons = [
+    iconFontNames: [ 'Ionicons.ttf' ] // Name of the font files you want to copy
+]
+
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
