--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -10,3 +10,6 @@ project(':react-native-firebase').projectDir = new File(rootProject.projectDir, 
 
 include ':react-native-geolocation-service'
 project(':react-native-geolocation-service').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-geolocation-service/android')
+
+include ':react-native-vector-icons'
+project(':react-native-vector-icons').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-vector-icons/android')
