--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -172,6 +172,8 @@ dependencies {
     implementation 'com.facebook.fresco:animated-gif:+'
 
     implementation project(':react-native-vector-icons')
+
+    implementation project(':react-native-maps')
 }
 
 // Run this once to be able to run the application with BUCK
