--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,6 +11,10 @@
       android:icon="@mipmap/ic_launcher"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+      <meta-data
+      android:name="com.google.android.geo.API_KEY"
+      android:value="AIzaSyCNhVlM-nlb4jDyQmjNzm2gW9AWyprVSqQ"/>
+
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
