--- a/android/build.gradle
+++ b/android/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         targetSdkVersion = 26
         supportLibVersion = "27.1.1"
         googlePlayServicesVersion = "+"
+        androidMapsUtilsVersion = "+"
     }
     repositories {
         google()
