--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-native": "0.57.7",
     "react-native-firebase": "^5.1.1",
     "react-native-geolocation-service": "^2.0.0",
+    "react-native-maps": "^0.22.1",
     "react-native-modal": "^7.0.1",
     "react-native-navigation": "^2.1.3",
     "react-native-vector-icons": "^6.1.0"
