--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-maps": "^0.22.1",
     "react-native-modal": "^7.0.1",
     "react-native-navigation": "^2.1.3",
+    "react-native-progress-bar-animated": "^1.0.6",
     "react-native-vector-icons": "^6.1.0"
   },
   "devDependencies": {
